# auracle

./: .clang-tidy  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: arch-linux-test-asan.yml  arch-linux-test.yml  arch.x86_64.asan.yml  arch.x86_64.yml
build-aux/: ci-test  ci-test-asan  clang-format  clang-tidy  source-format  test-san
e2e/: auracle_e2e_test.py  clone  clone.py  common  download  download.py  info.py  pkgbuild.py  raw_query.py  rawquery  regex_search.py  search.py
extra/: bash_completion  zsh_completion
man/: auracle.1.pod
src/: auracle.cc  auracle.hh  auracle_main.cc  format.cc  format.hh  format_parser.rl  inmemory_repo.cc  inmemory_repo.hh  pacman.cc  pacman.hh  sort.cc  sort.hh  terminal.cc  terminal.hh
src/aur/: aur.cc  aur.hh  client.cc  client.hh  json_internal.hh  package.cc  package.hh  request.cc  request.hh  request_test.cc  response.cc  response.hh  response_test.cc
src/auracle/: auracle.cc  auracle.hh  dependency.cc  dependency.hh  dependency_kind.cc  dependency_kind.hh  dependency_kind_test.cc  dependency_test.cc  format.cc  format.hh  format_test.cc  inmemory_repo.cc  inmemory_repo.hh  package_cache.cc  package_cache.hh  package_cache_test.cc  pacman.cc  pacman.hh  parsed_dependency.cc  parsed_dependency.hh  parsed_dependency_test.cc  search_fragment.cc  search_fragment.hh  search_fragment_test.cc  sort.cc  sort.hh  sort_test.cc  terminal.cc  terminal.hh
src/test/: gtest_main.cc
subprojects/: abseil-cpp.wrap  fmt.wrap  nlohmann_json.wrap
tests/: auracle_test.py  buildorder.py  clone.py  custom_format.py  download.py  info.py  outdated.py  pkgbuild.py  raw_query.py  regex_search.py  search.py  show.py  sort.py  sync.py  test_buildorder.py  test_clone.py  test_custom_format.py  test_info.py  test_outdated.py  test_raw_query.py  test_regex_search.py  test_resolve.py  test_search.py  test_show.py  test_sort.py  test_update.py  update.py
tests/fakeaur/: git  server.py
tests/fakeaur/db/: refreshdb
tests/fakeaur/db/info/: auracle-git  camlidl  curl-c-ares  curl-git  curl-http3-ngtcp2  curl-quiche-git  gapi-ocaml  google-drive-ocamlfuse  mingw-w64-environment  nlohmann-json  ocaml-base  ocaml-configurator  ocaml-cryptokit  ocaml-curl  ocaml-extlib  ocaml-ounit  ocaml-pcre  ocaml-sexplib0  ocaml-sqlite3  ocaml-stdio  ocaml-xmlm  ocaml-zarith  ocamlfuse  ocamlnet  pacman-fancy-progress-git  pacman-git  pacman-pb  pkgfile-git  python-booleanoperations  python-defcon  python-fontmath  python-fontparts  python-fontpens  python-pyclipper  yaourt
tests/fakeaur/db/search/: maintainer|falconindy  name-desc|aura  name-desc|aurac  name-desc|auracle  name-desc|git  name-desc|le-git  name-desc|systemd  provides|curl  provides|pacman
tests/fakepacman/local/auracle-git-r20.fb982ca-1/: desc
tests/fakepacman/local/ocaml-4.07.0-1/: desc  mtree
tests/fakepacman/local/pkgfile-git-18.5.gf31f10b-1/: desc
tests/fakepacman/sync/: community.db  extra.db
